--- a/cog.yaml
+++ b/cog.yaml
@@ -6,7 +6,7 @@ build:
     - libgl1-mesa-glx
     - libglib2.0-0
   python_packages:
-    - numpy==1.21.6
+    - numpy
     - torch==2.0.1
     - opencv-python-headless==4.5.5.64
     - scipy==1.10.0
@@ -17,5 +17,5 @@ build:
     - salesforce-lavis==1.0.2
     - transformers==4.26.1
   run:
-    - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/download/v0.0.1/pget" && chmod +x /usr/local/bin/pget
+    - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/download/v0.8.2/pget_Darwin_arm64" && chmod +x /usr/local/bin/pget
 predict: "predict.py:Predictor"
